# haskell

./: HR.hs  README.rst  collatz.hs  dstat.hs  fb.hs  happy.hs
bf/: BF.hs
dstat/: Main.hs  dstat.cabal  dstat.hs
hr/: HR.hs  Main.hs  hr.cabal
intro/: echo.hs  fb.hs  sicolor.hs
net/: lsip.cabal  lsip.hs
numbers/: collatz.hs  happy.hs  radix.hs  roman.hs
spark/: Main.hs  Spark.hs  spark.cabal
spark/src/: Main.hs  Spark.hs
