name:                lsip
version:             0.1.0.0
synopsis:            A simple utility to query one's external IP address
homepage:            https://github.com/HalosGhost/hs
license-file:        ../LICENSE
author:              Sam Stuewe (HalosGhost)
maintainer:          halosghost@archlinux.info
category:            Network
build-type:          Simple
cabal-version:       >=1.10

executable lsip
  main-is:             lsip.hs
  build-depends:       base >=4.8 && <4.9, http-conduit >=2.1.5.1 && <2.2, bytestring >=0.10.6.0 && <0.11
  default-language:    Haskell2010
