name:                spark
version:             0.3.0.0
license:             GPL-3
license-file:        LICENSE
author:              Sam Stuewe (HalosGhost)
maintainer:          halosghost@archlinux.info
category:            System
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:   Spark
  ghc-options:       -Wall -O2
  build-depends:     base       >= 4.8   && < 4.9,
                     containers >= 0.5.6 && < 0.6
  hs-source-dirs:    src
  default-language:  Haskell2010

executable spark
  main-is:           Main.hs
  ghc-options:       -Wall -O2
  build-depends:     base >= 4.8 && < 4.9
  hs-source-dirs:    src
  default-language:  Haskell2010
